--- a/public/css/fontello/css/fontello-codes.css
+++ b/public/css/fontello/css/fontello-codes.css
@@ -64,3 +64,10 @@
 .icon-mindset:before { content: '\e83e'; } /* '' */
 .icon-booz:before { content: '\e83f'; } /* '' */
 .icon-clock:before { content: '\e840'; } /* '' */
+.icon-toggle-off:before { content: '\e841'; } /* '' */
+.icon-toggle-on:before { content: '\e842'; } /* '' */
+.icon-graduation-cap:before { content: '\e843'; } /* '' */
+.icon-location:before { content: '\e844'; } /* '' */
+.icon-cafe:before { content: '\e845'; } /* '' */
+.icon-college:before { content: '\e846'; } /* '' */
+.icon-bar:before { content: '\e847'; } /* '' */
