--- a/public/css/events.css
+++ b/public/css/events.css
@@ -48,9 +48,11 @@ i.icon-create {
    height:400px;
 }
 .row-events-nearest {
-    width:40%
-;
+    width:40%;
+    height: 100%;
     display: inline-block;
+    vertical-align: top;
+    background: white;
 }
 .row-events-map {
     width:59%
