--- a/views/index.html
+++ b/views/index.html
@@ -379,7 +379,7 @@
   <script src="//js.pusher.com/2.2/pusher.min.js"></script>  
   <script src="dist/lib.js"></script>
   <script src="js/lib/pikaday.js"></script>
-  <script src="http://maps.googleapis.com/maps/api/js?sensor=false&libraries=places&dummy=.js" type="text/javascript"></script>
+  <script src="https://maps.googleapis.com/maps/api/js?libraries=places,geometry" type="text/javascript"></script>
 
   <!-- custom scripts -->
   <script src="js/src/lj-params.js"></script>
