--- a/views/index.html
+++ b/views/index.html
@@ -265,12 +265,93 @@
       <div class="row row-events text-center">
         <h2> Tous les before </h2>
         <h5 class="row-title-sub"> L'abus de soirées est excellent pour la santé.</h5>
-        <button class="theme-btn btn-create-event">Créer un before</button>
       </div>
-
+      <div class="row row-events row-events-filters etiquette">
+        <div class="row-events-filters-group">
+          <div class="event-filter-label">Vous êtes : </div>
+          <div class="event-filter-options filter-mixity">
+            <div class="event-filter">Des filles</div>
+            <div class="event-filter">Des gars</div>
+            <div class="event-filter">Les deux</div>
+          </div>
+        </div>
+        <div class="row-events-filters-divider"></div>
+        <div class="row-events-filters-group">
+          <div class="event-filter-label">Vous avez : </div>
+          <div class="event-filter-options filter-agerange">
+            <div class="event-filter">18-25</div>
+            <div class="event-filter">25-30</div>
+            <div class="event-filter">30+</div>
+          </div>
+        </div>
+        <div class="row-events-filters-divider"></div>
+        <div class="row-events-filters-group">
+          <div class="event-filter-label">C'est pour sortir : </div>
+          <div class="event-filter-options">
+            <div class="event-filter">Aujourd'hui</div>
+            <div class="event-filter">Plus tard</div>
+          </div>
+        </div>
+        <button class="theme-btn btn-create-event right">Créer un before</button>
+      </div>
       <div class="row row-events row-main">
-        <div class="row-events-nearest"></div>
-        <div class="row-events-map"></div>
+        <div class="row-events-nearest">
+              <!-- Dynamically loaded -->
+        </div>
+        <div class="row-events-map">
+          <!-- Dynamically loaded -->
+        </div>
+        <div class="row-events-accepted-preview">
+          <div class="event-accepted-preview">17/05, Rue princesse</div>
+          <div class="event-accepted-preview">18/05, Odéon</div>
+          <div class="event-accepted-preview">29/05, boulevard des Grands-Maraîchers</div>
+          <!-- Dynamically loaded -->
+        </div>
+        <div class="row-events-accepted-inview">
+          <div class="event-accepted-users">
+            <div class="event-accepted-users-group">
+              <div class="event-accepted-group-name">Organisateurs</div>
+              <div class="event-accepted-user">
+                <div class="event-accepted-user-age">26</div>
+                <div class="event-accepted-user-picture"><img src="/img/ph1.jpg" width="40" class="rounded"/></div>
+                <div class="event-accepted-user-name">Léo</div>
+                <div class="event-accepted-user-hashtag">Etudiant</div>
+              </div>
+              <div class="event-accepted-user">
+                <div class="event-accepted-user-age">22</div>
+                <div class="event-accepted-user-picture"><img src="/img/ph2.jpg" width="40" class="rounded"/></div>
+                <div class="event-accepted-user-name">Léa</div>
+                <div class="event-accepted-user-hashtag">Drunk</div>
+              </div>
+            </div>
+            <div class="event-accepted-users-group">
+            <div class="event-accepted-group-name">Groupe 1</div>
+              <div class="event-accepted-user">
+                <div class="event-accepted-user-age">23</div>
+                <div class="event-accepted-user-picture"><img src="/img/ph3.jpg" width="40" class="rounded"/></div>
+                <div class="event-accepted-user-name">Marianne</div>
+                <div class="event-accepted-user-hashtag">Lover</div>
+              </div>
+            </div>
+          </div>
+          <div class="event-accepted-chat">
+            <div class="event-accepted-chat-messages">
+              <div class="event-accepted-chat-message" data-authorid="blabla" >
+                  <img src="/img/ph2.jpg" width="30" class="rounded"/>
+                  <div class="event-accepted-chat-text">Salut, je peux venir avec une personne de + ?</div>
+              </div>
+              <div class="event-accepted-chat-message me" data-authorid="blabla" >
+                  <img src="/img/ph1.jpg" width="30" class="rounded"/>
+                  <div class="event-accepted-chat-text">Oui aucun problèmes!</div>
+              </div>
+            </div>
+            <div class="event-accepted-chat-typing">
+              <input type="text">
+              <button class="theme-btn">Envoyer</button>
+            </div>
+          </div>
+          <!-- Dynamically loaded -->
+        </div>
       </div>
   
 
@@ -379,6 +460,7 @@
   <script src="//js.pusher.com/2.2/pusher.min.js"></script>  
   <script src="dist/lib.js"></script>
   <script src="js/lib/pikaday.js"></script>
+  <script src="js/lib/momentwithlocale.min.js"></script>
   <script src="https://maps.googleapis.com/maps/api/js?libraries=places,geometry" type="text/javascript"></script>
 
   <!-- custom scripts -->
