--- a/public/css/events.css
+++ b/public/css/events.css
@@ -12,10 +12,12 @@ width: 1150px;}
 
 .row-title-sub {
    text-align: center;
-   color: #ABABAB;
+   color: #3D3D3D;
    margin-top: 8px;
    text-transform: none;
-   margin-bottom: 20px;
+   margin-bottom: 0px;
+   font-size: 14px;
+   font-family: 'Karla';
 }
 
 .row-create {
@@ -27,37 +29,268 @@ i.icon-create {
 }
 
 .btn-create-event {
-   width: 210px;
+   width: 140px;
    text-transform: uppercase;
    font-weight: bolder;
-   padding: 14px 3px;
+   padding: 11px 3px;
    color: white;
    font-size: 10px;
-   background: linear-gradient(red, #CE6C56);
-   background: #C83D3D;
-   background: linear-gradient(35deg,#A51313,#A94332);
-   border: 1px solid #B54343;
    border: none;
-   border-radius: 0px;
    cursor: pointer;
-   top: 57px;
-   z-index: 200;
+   background: #424242;
+   border-radius: 1px;
+   position: absolute;
+   right: 8px;
+   top: 11px;
 }
 
 .row-main {
-   height:400px;
+   height: 550px;
+   position: relative;
+   z-index: 0;
+   text-align: center;
+   padding-bottom: 0;
 }
 .row-events-nearest {
-    width:40%;
-    height: 100%;
-    display: inline-block;
+    /* display: none; */
     vertical-align: top;
-    background: white;
+    background: none;
+    padding: 20px 50px;
+    position: absolute;
+    z-index: 1;
 }
 .row-events-map {
-    width:59%
-;
+    width: 100%;
     height: 100%;
     display: inline-block;
 }
+.row-events-accepted-preview,
+.row-events-accepted-inview {
+   background: rgba(255, 255, 255, 0.55);
+   position: absolute;
+   bottom: 0;
+   height: 65px;
+   width: 100%;
+   border-top: 1px solid #E0E0E0;
+   text-align: left;
+   padding: 14px 0 0 40px;
+}
+
+.events-accepted-inview {
+  height: 400px;
+}
+
+.event-nearest {
+   padding: 11px 12px!important;
+   margin: 10px auto;
+   opacity: 0;
+   background: rgb(252, 252, 252)!important;
+   text-align: left;
+   box-shadow: 0px 2px 3px #9D9D9D!important;
+}
+.event-nearest-part {
+   text-align: left;
+   vertical-align: middle;
+}
+.event-nearest-hosts {
+   text-align: left;
+   margin-right: 10px;
+   vertical-align: middle;
+   display: inline-block;
+}
+.event-nearest-host-picture {
+display: inline-block;
+margin: 0 2px;
+}
+.event-nearest-host-picture img {
+    position: relative;
+    margin: 1px 2px;
+    top: 1px;
+}
+.event-nearest-details {
+
+text-align: left;
+display: inline-block;vertical-align: middle;}
+.event-nearest-address {
+letter-spacing: -.5px;
+font-size: 14px;
+height: 14px;
+margin: 2px 0 2px 2px;
+
+font-family: 'Karla';
+font-weight: bolder;
+color: #434343;
+}
+.event-nearest-hosts-names {
+   font-size: 11px;
+   color: #8D8D8D;
+   background: #F8F8F8;
+   padding: 5px;
+   display: inline-block;
+   border-radius: 3px;
+   line-height: 14px;
+}
+
+.row-events-filters {
+  position: relative;
+  text-align: left;
+  background: #FEFEFE!important;
+}
+.row-events-filters-group {
+  text-align: left;
+  display: inline-block;
+  font-family: 'Karla';
+  position: relative;
+}
+
+.event-filter-label {
+
+display: inline-block;font-weight: bolder;font-family: 'Lato';font-size: 14px;margin-left: 3px;}
+
+.event-filter-options {
+
+display: inline-block;}
+
+.event-filter {
+  display: inline-block;
+  font-size: 13px;
+  padding: 5px 10px;
+  border-radius: 3px;
+  margin: 0 4px;
+  background: #F8F8F8;
+  cursor: pointer;
+}
+.row-events-filters-divider {
+  display:inline-block;
+  border-right: 1px solid #A7A7A7;
+  border-left: 1px solid #E5E5E5;
+  height: 22px;
+  width:1px;
+  vertical-align: middle;
+  margin: 0 11px;
+}
+
+
+.btn-request-in:hover, .btn-create-event:hover {
+  opacity: .9;
+}
+.btn-request-in {
+  text-transform: uppercase;
+  padding: 9px 15px;
+  border-radius: 0;
+  background: #3F3F3F;
+  border: 1px solid #2A2A2A;
+  font-size: 10px;
+  color: white;
+  margin-left: 15px;
+  display: inline-block;
+  vertical-align: middle;
+}
+.btn-request-in-disabled {
+  opacity: .7;
+  color: #B4B4B4;
+  border: 1px solid #FFF;
+  cursor: not-allowed!important;
+}
+.event-preview-host-picture img {
+}
+.event-preview-timeanddate,
+.event-preview-ambiance,
+.event-preview-host {
+  background: rgb(253, 253, 253);
+  box-shadow: 0 1px 1px #EAEAEA;
+}
+.event-nearest-selected {
+}
+
+.event-accepted-preview {
+
+display: inline-block;vertical-align: middle;font-size: 12px;background: #FFFFFF;border: 1px solid #eee;color: #4A4A4A;padding: 10px 20px;position: relative;z-index: 1;cursor: pointer;}
+
+.event-accepted-preview.active {
+  background: #828282;
+  border: 1px solid #787878;
+  color: white;
+}
+
+/* 
+  Events inview 
+*/
+.row-events-accepted-inview {
+  height: 400px;
+  bottom: 0;
+  padding: 40px 40px 0 40px;
+}
+.event-accepted-users,
+.event-accepted-chat {
+  background: white;
+  display: inline-block;
+  vertical-align: top;
+  height: 83%;
+}
+.event-accepted-users {
+
+width: 30%;display: inline-block;padding: 8px;}
+.event-accepted-user > div {
+  display: inline-block;
+  vertical-align: middle;
+}
+.event-accepted-users-group {
+
+}
+.event-accepted-group-name {
+
+color: #ccc;text-transform: uppercase;text-align: right;font-size: 12px;padding: 7px 8px 0 0;}
+.event-accepted-user {
+
+margin: 3px 0;font-family: 'Karla';padding: 1px;background: #FCFCFC;border-bottom: 1px solid #eee;}
+.event-accepted-user-name {
+
+letter-spacing: -.5px;margin-left: 8px;}
+.event-accepted-user-picture {
+
+}
+.event-accepted-user-picture img {
+
+background: white;padding: 2px;position: relative;top: 1px;}
+.event-accepted-user-age {
+
+color: #292929;font-size: 15px;font-family: 'Gochi hand';margin: 0 9px;}
+.event-accepted-user-hashtag {
+
+float: right;font-size: 13px;background: #F7F7F7;color: grey;padding: 7px 12px;border-radius: 2px;margin: 8px 7px 0 0;}
+.event-accepted-chat {
+
+width: 69%;padding: 20px;position: relative;}
+.event-accepted-chat-messages {
+
+height: 80%;background: #FFFFFF;}
+.event-accepted-chat-message {
+
+overflow: hidden;padding: 0 10px;position: relative;}
+.event-accepted-chat-message img {
+
+position: absolute;bottom: 0;}
+.event-accepted-chat-text {
+
+max-width: 260px;display: inline-block;font-size: 13px;font-family: 'Karla';margin-left: 40px;margin-right: 0px;background: #FCFCFC;border-bottom: 1px solid #eee;color: #464646;padding: 10px;border-radius: 4px;}
+.event-accepted-chat-message.me img {
+right: 0;}
+.event-accepted-chat-message.me {
+
+margin-right: 20px;margin-left: 0;}
+.event-accepted-chat-message.me .event-accepted-chat-text {
+  margin-right: 30px;
+  float: right;
+  text-align: right;
+}
+.event-accepted-chat-typing {
+
+position: absolute;bottom: 0;left: 0;/* background: #FCFCFC; */border-top: 1px solid #eee;height: 42px;width: 100%;padding: 8px 20px 0 20px;}
+.event-accepted-chat-typing input {
+
+position: relative;z-index: 2;background: #FCFCFC;padding: 6px 0 4px 10px;border-bottom: 1px solid #eee;width: 89%;color: #525252;font-family: 'Karla';font-size: 13px;}
+.event-accepted-chat-typing button {
+
+float: right;background: #3F3F3F;border: 1px solid #FFFFFF;border-radius: 0px;color: white;}
 
