validation with arrays, and socket_di

--- a/public/css/events.css
+++ b/public/css/events.css
@@ -198,8 +198,8 @@ display: inline-block;}
 }
 
 .btn-preview-edit {
-	background: white;
-	color: black;
+	background: #E94F6A;
+	color: white;
 	border: 1px solid transparent;
 }
 .btn-request-in-disabled {
