--- a/public/css/search.css
+++ b/public/css/search.css
@@ -9,7 +9,7 @@
    letter-spacing: 1px;
 }
 
-.etiquette {
+.event-preview.etiquette.slow-down-3 {
    background: rgba(255, 255, 255, 0.81);
    border-bottom: 1px solid #E4E4E4;
    box-shadow: 0 0 1px #e4e4e4;
